﻿                     wxFormBuilder ChangeLog
************************************************************************
date  Version 3.00.18 (Beta 3)
* Undo command of MoveHierarchy (move left) now restores the position of
  the object.
* Fixed FS#86 — "Object-tree context-menu "Copy" command has no effect"

01-19-2007  Version 3.00.17 (Beta 2)
* Fixed bug where dragging on created dialog statusbar was resizing the main
  application window.
* Fixed FS#85 — "required wx/imagelist.h for wxListbook using image files."
  with help from akira.
* Fixed the "relative_path" and "internationalize" properties for code
  generated from the inner template of a macro. This resolves FS#83 and
  FS#84.
^ Changed generation of "minimum_size" and "maximum_size" for wxFrame and
  wxDialog to using SetSizeHints.
+ Added new 'Generate Inherited Class' dialog.
+ Added menu events.
+ Added Toolbar tool events.

01-11-2007 Version 3.00.16 (Beta 2)
* Improved tolerance of wxBitmap properties to old project files.
  This resolves FS#78.
+ Added "kind" property to tools and added "tooltip" and "statusbar"
  properties to the generated XRC. 
  This resovles FS#79 — "Toggle buttons on toolbar."
^ Updated the splash screen again.

01-09-2007 Version 3.00.15 (Beta 2)
+ Added new splash screen.
* Fixed a focus bug that crashed when adding a sizer in certain container
  widgets.

01-04-2007 Version 3.00.14 (Beta 2)
+ Added all known events to the common tab.
+ Added descriptions of the subproperties for bitmap properties
+ Added support for using the non-default editors in the property grid.
  Just add 'editor="Name"' to your xml element for the property.
+ Added a warning about the removal of the "user_headers" property during
  the project import process.
+ The selection border can be drawn even when it extends beyond the edge of
  the inner content panel.
+ Catching left clicks on the title bar of innerframe in order to select it.
+ Added wxSL_BOTH style flag to wxSlider.