@@ -21,6 +21,10 @@
 		<property name="use_microsoft_bom" type="bool" help="For C++ and WXMSW Only. Files are generated with UTF-8 encoding. Microsoft compiliers expect a specific byte sequence at the beginning of a file. GCC does NOT expect this. Only set this to true when using a Microsoft compiler.">0</property>
 		<property name="precompiled_header" type="text" help="For C++ Only. Precompiled header to include at the top of the generated source file.">wx/wxprec.h</property>
 	</category>
+	<category name="XRC Properties">
+		<property name="bitmaps"	type="stringlist"	help="For XRC Only. A list of files to generate as wxBitmaps."/>
+		<property name="icons"		type="stringlist"	help="For XRC Only. A list of files to generate as wxIcons."/>
+	</category>
   </objectinfo>
   <objectinfo class="C++" smallIcon="c++.png" type="interface">
     <property name="permission" type="option" hidden="1">
